--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "jest": {
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "dependencies": {
     "@testing-library/user-event": "^7.1.2",
@@ -12,6 +14,7 @@
     "date-fns": "^2.11.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "google-maps-react": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-custom-scroll": "^4.2.0",
