--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-zoom-pan-pinch": "^1.6.1",
     "styled-components": "^5.0.1"
   },
   "scripts": {
