--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
     "react-loading": "^2.0.3",
+    "react-player": "^2.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5",
